Added code files

--- a/mergedDataset.ipynb
+++ b/mergedDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "539ff7f0",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the student dataset\n",
-    "student_df = pd.read_csv('Student_dataset.csv')\n",
+    "student_df = pd.read_csv('Student_dataset copy.csv')\n",
     "\n",
     "# Load the Mendeley dataset\n",
     "mendeley_df = pd.read_csv('Mendeley_dataset.csv')\n",
@@ -19,7 +19,7 @@
     "mendeley_df = mendeley_df[['artist_name', 'track_name', 'release_date', 'genre', 'lyrics']]\n",
     "\n",
     "# Combine or join the two datasets using concat function\n",
-    "merged_df = pd.concat([student_df, mendeley_df], ignore_index=True)\n",
+    "merged_df = pd.concat([mendeley_df, student_df], ignore_index=True)\n",
     "\n",
     "# Save the merged dataset to a new csv file\n",
     "merged_df.to_csv('Merged_dataset_new.csv', index=False)\n"
@@ -114,6 +114,134 @@
     "merged_df.head()\n",
     "merged_df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "31121b52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the Mendeley dataset\n",
+    "data = pd.read_csv('Merged_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e10b4cb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing or null values in 'lyrics' column:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_values = data['lyrics'].isnull().sum()\n",
+    "print(\"Number of missing or null values in 'lyrics' column: \", missing_values)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2c64f876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows after dropping missing or null values in 'lyrics' column:  28471\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop rows with missing or null values in 'lyrics' column\n",
+    "data.dropna(subset=['lyrics'], inplace=True)\n",
+    "\n",
+    "# Print number of rows remaining in the dataset\n",
+    "print(\"Number of rows after dropping missing or null values in 'lyrics' column: \", len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "16012efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing or null values in 'lyrics' column:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_values = data['lyrics'].isnull().sum()\n",
+    "print(\"Number of missing or null values in 'lyrics' column: \", missing_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd9454ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Remove brackets and the text inside them from the lyrics column\n",
+    "data['lyrics'] = data['lyrics'].apply(lambda x: re.sub(r'\\[[^\\]]*\\]', '', x))\n",
+    "\n",
+    "# Strip leading and trailing whitespace from the lyrics column\n",
+    "data['lyrics'] = data['lyrics'].str.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5ac84961",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# assuming your lyrics column is named 'lyrics'\n",
+    "lyrics = data['lyrics']\n",
+    "\n",
+    "# replace multiple newlines and whitespaces with a single space character\n",
+    "lyrics = lyrics.apply(lambda x: re.sub(r'[\\n\\s]+', ' ', x))\n",
+    "\n",
+    "# remove any leading or trailing whitespace\n",
+    "lyrics = lyrics.str.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "70437bc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the merged dataset to a new csv file\n",
+    "data.to_csv('Merged_dataset_new.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "094ef072",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
